# volumed

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
dbus/: CMakeLists.txt
src/: ALSAPlaybackMixerElement.c  ALSAPlaybackMixerElement.h  CMakeLists.txt  VolumeManager.c  VolumeManager.h  config.h.in  main.c
systemd/: CMakeLists.txt  Service.service.in
